# rag_kitcore

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.backend  Dockerfile.chainlit  Dockerfile.indexer  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.backend.txt  requirements.common.txt  requirements.indexer.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile.backend  Dockerfile.backend_gpu  dependencies.py  main.py  requirements.backend.txt  warmup.py
backend/api/: main.py  requirements.backend.txt
backend/routers/: info.py  rag.py
config/: __init__.py  config.yaml  config_loader.py  prompts.yaml  schema.py
core/: llm_factory.py  llm_ollama.py  llm_vllm.py  resources.py  settings.py
data/: sample.txt
indexer/: requirements.indexer.txt
logging/: __init__.py  app_logging.py  metrics.py
logsys/: formatter.py  handlers.py  logger.py
rag/: __init__.py  llm.py  pipeline.py  prompts.py  reranker.py  retriever.py
rag/conversion/: base.py  docx_converter.py  pdf_converter.py  registry.py
rag/embedding/: embedder.py
rag/indexing/: chunker.py  cleaner.py  pipeline.py  processor.py
rag/pipelines/: extractor_rag.py
rag/prompts/: extractor.py
rag_kitcore/: requirements.txt
rag_kitcore/core/: types.py
rag_kitcore/core/device/: utils.py
rag_kitcore/core/embeddings/: factory.py  huggingface.py
rag_kitcore/core/llm/: base.py  ollama.py
rag_kitcore/core/rerankers/: factory.py
rag_kitcore/core/retrieval/: bm25.py  reranked_retriever.py
rag_kitcore/core/vectorstore/: base.py  factory.py
rag_kitcore/logsys/: handlers.py
rag_kitcore/rag/conversion/: txt_converter.py
rag_kitcore/rag/embedding/: embedder.py
rag_kitcore/rag/indexing/: README.md  cleaner.py  file_resolver.py  pipeline.py  utils.py
rag_kitcore/rag/pipelines/: extractor_rag.py
rag_kitcore/rag/prompting/: pipeline.py
rag_kitcore/rag/retrieval/: pipeline.py  (+1 more)
retrievers/: bm25.py  hybrid.py  reranker.py
scripts/: ingest.py
tests/: test_api.py  test_rag.py  test_vectorstore.py
tests/manual/: test_answer.py  test_bm25.py  test_dense.py  test_hybrid.py  test_prompt.py
utils/: helpers.py  logger.py
vectorstore/: __init__.py  chunker.py  embeddings.py  index_builder.py  loaders.py  qdrant_store.py  vector_db.py
vectorstore/qdrant/: Dockerfile.qdrant
webapp/: api.py  streamlit_app.py  ui_helpers.py
webapp/chainlit/: Dockerfile.chainlit  app.py
webapp/chainlit_app/: app.py  rag_pipeline.py  settings.py
webapp/ollama/: Dockerfile.ollama  entrypoint.sh  pull_model.py
webapp/streamlit_app/: streamlit_app.py
(+34 files in other folders)
