[tool.poetry]
name = "rag_kitcore"
version = "0.0.1"
description = "Modular RAG indexing and retrieval toolkit"
authors = ["Simone"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

sentence-transformers = ">=5.2,<6.0"
qdrant-client = ">=1.15,<1.16"
rank-bm25 = ">=0.2,<1.0"

langchain-core = ">=1.2,<2.0"
langchain-community = ">=0.4,<1.0"
langchain-huggingface = ">=1.2,<2.0"
langchain-qdrant = ">=1.1,<2.0"

numpy = ">=2.2,<3.0"
pydantic = ">=2.12,<3.0"
pydantic-settings = ">=2.12,<3.0"
pyyaml = ">=6.0,<7.0"
requests = ">=2.32,<3.0"
python-docx = ">=1.1,<2.0"
docling = "*"
httpx = ">=0.28,<1.0"

[tool.poetry.scripts]
rag-index = "rag_kitcore.rag.indexing.pipeline:run_indexing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
